--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-441.2KB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 14.152.92.75, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-1007.7KB/s(Youtube:不良林), server: 42.157.195.245, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2, server: 14.152.92.77, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-20.92MB/s(Youtube:不良林), server: a01-cn-s1k111.cdnlive.straycloud.xyz, port: 604, type: ss, cipher: aes-128-gcm, password: 2bfd73bb-fb0c-4c1a-9d4f-92347b8caa32}
+  - {name: 🇨🇳 台湾-550.2KB/s(Youtube:不良林), server: hinet.52147.top, port: 443, type: trojan, password: 87f6eb37-36af-4347-95c7-8b3b0a3e9194, sni: hinet.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-501.3KB/s(Youtube:不良林), server: 134.195.198.95, port: 5004, type: ss, cipher: aes-256-gcm, password: g5MeD6Ft3CWlJId}
+  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 14.152.92.73, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1.07MB/s(Youtube:不良林), server: 14.152.92.74, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2, server: 42.157.195.231, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-876.2KB/s(Youtube:不良林), server: 14.152.92.71, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
   - {name: 🇨🇳 中国-342.1KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-319.1KB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
   - {name: 🇨🇳 中国-304.8KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65093, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
   - {name: 🇨🇳 中国-444.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇺🇸 美国-595.7KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-441.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-550.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-501.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1007.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-20.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-876.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-342.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-319.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-304.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-444.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-595.7KB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-441.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-550.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-501.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1007.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-20.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-876.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-342.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-319.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-304.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-444.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-595.7KB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-441.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-550.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-501.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1007.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-20.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-876.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-342.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-319.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-304.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-444.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-595.7KB/s(Youtube:不良林)
@@ -66,19 +66,20 @@ proxy-groups:
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇨🇳 台湾-550.2KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-441.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-550.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-501.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1007.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-20.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-876.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-342.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-319.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-304.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-444.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-595.7KB/s(Youtube:不良林)
@@ -87,13 +88,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-441.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-550.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-501.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1007.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-20.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-876.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-342.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-319.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-304.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-444.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-595.7KB/s(Youtube:不良林)
@@ -103,13 +104,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-441.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-550.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-501.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1007.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-20.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-876.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-342.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-319.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-304.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-444.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-595.7KB/s(Youtube:不良林)
@@ -128,13 +129,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-441.2KB/s(Youtube:不良林)
+      - 🇨🇳 台湾-550.2KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-501.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1007.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林) 2
-      - 🇨🇳 中国-20.92MB/s(Youtube:不良林)
+      - 🇨🇳 中国-876.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-342.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-319.1KB/s(Youtube:不良林)
       - 🇨🇳 中国-304.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-444.5KB/s(Youtube:不良林)
       - 🇺🇸 美国-595.7KB/s(Youtube:不良林)
