--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇭🇰 香港-1.93MB/s(Youtube:不良林), server: hkt.52147.top, port: 443, type: trojan, password: 87f6eb37-36af-4347-95c7-8b3b0a3e9194, sni: hkt.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-342.1KB/s(Youtube:不良林), server: best01.downloadmovie.cn, port: 65090, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best01.downloadmovie.cn}}
-  - {name: 🇨🇦 加拿大-1.47MB/s(Youtube:不良林), server: 134.195.198.95, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇨🇳 中国-276.8KB/s(Youtube:不良林), server: 111.45.29.75, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-823.5KB/s(Youtube:不良林), server: 14.152.92.81, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-444.5KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-595.7KB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
-  - {name: 🇭🇰 香港-513.1KB/s(Youtube:不良林), server: 43.129.175.128, port: 20010, type: vmess, uuid: 022fef82-1b48-440b-a7e0-a47dc6bde5b4, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-586.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
   - {name: 🇸🇬 新加坡-1.28MB/s(Youtube:不良林), server: bai-piao-wang-zhe12.98848.xyz, port: 36736, type: vmess, uuid: 50a9c98e-8c48-4680-feff-a7ea34705ae9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ytryr6, ws-headers: {Host: bai-piao-wang-zhe12.98848.xyz}}
+  - {name: 🇨🇳 中国-1.32MB/s(Youtube:不良林), server: 14.152.92.82, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-671.7KB/s(Youtube:不良林), server: 42.157.195.238, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇰🇷 韩国-462.7KB/s(Youtube:不良林), server: 13.124.190.68, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
   - {name: 🇨🇦 加拿大-519.4KB/s(Youtube:不良林), server: 134.195.198.95, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
+  - {name: 🇺🇸 美国-667.7KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-470.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-401.7KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65088, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
+  - {name: 🇨🇳 中国-349.9KB/s(Youtube:不良林), server: 42.157.195.235, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-342.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-276.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-823.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-444.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-595.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-513.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-586.3KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-671.7KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-462.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-519.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-667.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-470.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-401.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.9KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇭🇰 香港-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-342.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-276.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-823.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-444.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-595.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-513.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-586.3KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-671.7KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-462.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-519.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-667.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-470.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-401.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.9KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇭🇰 香港-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-342.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-276.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-823.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-444.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-595.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-513.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-586.3KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-671.7KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-462.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-519.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-667.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-470.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-401.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.9KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-1.93MB/s(Youtube:不良林)
-      - 🇭🇰 香港-513.1KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇭🇰 香港-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-342.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-276.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-823.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-444.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-595.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-513.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-586.3KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-671.7KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-462.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-519.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-667.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-470.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-401.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.9KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇭🇰 香港-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-342.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-276.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-823.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-444.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-595.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-513.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-586.3KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-671.7KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-462.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-519.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-667.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-470.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-401.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.9KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-342.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-276.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-823.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-444.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-595.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-513.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-586.3KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-671.7KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-462.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-519.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-667.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-470.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-401.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.9KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇭🇰 香港-1.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-342.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.47MB/s(Youtube:不良林)
-      - 🇨🇳 中国-276.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-823.5KB/s(Youtube:不良林)
-      - 🇨🇳 中国-444.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-595.7KB/s(Youtube:不良林)
-      - 🇭🇰 香港-513.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-586.3KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
+      - 🇨🇳 中国-671.7KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-462.7KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-519.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-667.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-470.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-401.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-349.9KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
