--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-586.3KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇸🇬 新加坡-1.28MB/s(Youtube:不良林), server: bai-piao-wang-zhe12.98848.xyz, port: 36736, type: vmess, uuid: 50a9c98e-8c48-4680-feff-a7ea34705ae9, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ytryr6, ws-headers: {Host: bai-piao-wang-zhe12.98848.xyz}}
-  - {name: 🇨🇳 中国-1.32MB/s(Youtube:不良林), server: 14.152.92.82, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-671.7KB/s(Youtube:不良林), server: 42.157.195.238, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇰🇷 韩国-462.7KB/s(Youtube:不良林), server: 13.124.190.68, port: 443, type: ss, cipher: aes-256-cfb, password: amazonskr05}
+  - {name: 🇨🇳 中国-1.33MB/s(Youtube:不良林), server: 42.157.195.244, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇺🇸 美国-4.15MB/s(Youtube:不良林), server: 178.157.62.49, port: 50500, type: trojan, password: c5d997fe-cde6-463c-a671-a296b47289a6, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-200.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林), server: 42.157.195.242, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-608.5KB/s(Youtube:不良林), server: 42.157.195.245, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
   - {name: 🇨🇦 加拿大-519.4KB/s(Youtube:不良林), server: 134.195.198.95, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
   - {name: 🇺🇸 美国-667.7KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
   - {name: 🇨🇳 中国-470.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-586.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-671.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-462.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-200.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-608.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-519.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-667.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-470.6KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-586.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-671.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-462.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-200.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-608.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-519.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-667.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-470.6KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-586.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-671.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-462.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-200.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-608.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-519.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-667.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-470.6KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-586.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-671.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-462.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-200.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-608.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-519.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-667.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-470.6KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-586.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-671.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-462.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-200.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-608.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-519.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-667.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-470.6KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-586.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-671.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-462.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-200.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-608.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-519.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-667.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-470.6KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-586.3KB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-1.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.32MB/s(Youtube:不良林)
-      - 🇨🇳 中国-671.7KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-462.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
+      - 🇨🇳 中国-200.0KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇨🇳 中国-608.5KB/s(Youtube:不良林)
       - 🇨🇦 加拿大-519.4KB/s(Youtube:不良林)
       - 🇺🇸 美国-667.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-470.6KB/s(Youtube:不良林)
