--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇨🇳 中国-1.16MB/s(Youtube:不良林), server: 42.157.195.242, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1.04MB/s(Youtube:不良林), server: 14.152.92.72, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
   - {name: 🇨🇳 中国-1.33MB/s(Youtube:不良林), server: 42.157.195.244, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇺🇸 美国-4.15MB/s(Youtube:不良林), server: 178.157.62.49, port: 50500, type: trojan, password: c5d997fe-cde6-463c-a671-a296b47289a6, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-200.0KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 34003, type: trojan, password: 177501cc-f0c2-3cc3-b9a7-8c1e8e27655f, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林), server: 42.157.195.242, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-608.5KB/s(Youtube:不良林), server: 42.157.195.245, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇦 加拿大-519.4KB/s(Youtube:不良林), server: 134.195.198.95, port: 2375, type: ss, cipher: aes-256-gcm, password: faBAoD54k87UJG7}
-  - {name: 🇺🇸 美国-667.7KB/s(Youtube:不良林), server: azgy001.xiba1.xyz, port: 20711, type: trojan, password: 7497242f-3044-3c77-bf48-14bb26c92a83, sni: azgy001.xiba1.xyz, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-470.6KB/s(Youtube:不良林), server: pp1.zhengzhongfeizhu.xyz, port: 32001, type: trojan, password: eb2f8154-ff58-3b99-b393-28c8eecdbe64, sni: pp1.zhengzhongfeizhu.xyz, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林), server: 42.157.195.230, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1.33MB/s(Youtube:不良林) 2, server: 14.152.92.80, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
   - {name: 🇨🇳 中国-401.7KB/s(Youtube:不良林), server: best03.downloadmovie.cn, port: 65088, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best03.downloadmovie.cn}}
   - {name: 🇨🇳 中国-349.9KB/s(Youtube:不良林), server: 42.157.195.235, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇬🇧 英国-2.64MB/s(Youtube:不良林), server: 51.195.136.209, port: 50004, type: ss, cipher: aes-256-cfb, password: !<str> 4415934295}
+  - {name: 🇫🇷 法国-1.07MB/s(Youtube:不良林), server: 51.195.35.134, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/273213070933, ws-headers: {Host: 51.195.35.134}}
+  - {name: 🇷🇺 俄罗斯联邦-604.6KB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-200.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-608.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-519.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-667.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-470.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.33MB/s(Youtube:不良林) 2
       - 🇨🇳 中国-401.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-349.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.64MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-604.6KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-200.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-608.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-519.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-667.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-470.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.33MB/s(Youtube:不良林) 2
       - 🇨🇳 中国-401.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-349.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.64MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-604.6KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-200.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-608.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-519.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-667.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-470.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.33MB/s(Youtube:不良林) 2
       - 🇨🇳 中国-401.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-349.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.64MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-604.6KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-200.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-608.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-519.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-667.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-470.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.33MB/s(Youtube:不良林) 2
       - 🇨🇳 中国-401.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-349.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.64MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-604.6KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-200.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-608.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-519.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-667.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-470.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.33MB/s(Youtube:不良林) 2
       - 🇨🇳 中国-401.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-349.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.64MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-604.6KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-200.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-608.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-519.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-667.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-470.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.33MB/s(Youtube:不良林) 2
       - 🇨🇳 中国-401.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-349.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.64MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-604.6KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇳 中国-1.16MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.04MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.33MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.15MB/s(Youtube:不良林)
-      - 🇨🇳 中国-200.0KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-608.5KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-519.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-667.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-470.6KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.33MB/s(Youtube:不良林) 2
       - 🇨🇳 中国-401.7KB/s(Youtube:不良林)
       - 🇨🇳 中国-349.9KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.64MB/s(Youtube:不良林)
+      - 🇫🇷 法国-1.07MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-604.6KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
